--- a/api/app/views/pages/index.html.erb
+++ b/api/app/views/pages/index.html.erb
@@ -1,1 +1,5 @@
 <p>Hello <%= current_user ? current_user.email : "Guest"%></p>
+<%- if current_user %>
+<%= link_to "Generate Token", token_authentications_path(:user_id => current_user.id), :method => :post, :confirm => "Are you sure?" %>
+<%= link_to "Delete Token", token_authentication_path(current_user), :method => :delete, :confirm => "Are you sure?"%>
+<%- end %>
