--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -22,6 +22,7 @@
         android:layout_height = "match_parent"        
         android:background="@color/white"
         android:textColor="@color/black"
+        android:layout_marginRight="20dp"
         android:layout_marginBottom = "20dp"
         android:inputType = "none"/>
     </LinearLayout>
@@ -42,6 +43,7 @@
         android:layout_height = "match_parent"
         android:background="@color/white"
         android:textColor="@color/black"
+        android:layout_marginRight="20dp"
         android:layout_marginBottom = "20dp"
         android:inputType="textPassword"
         />
@@ -49,18 +51,22 @@
     <LinearLayout 
         android:layout_width = "fill_parent"
         android:layout_height = "wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:gravity="center">
         <Button 
-         	android:layout_width="wrap_content"
+            style="@style/buttonShortStyle"
     		android:layout_height="match_parent"
-    		android:layout_marginBottom = "20dp"
+    		android:layout_marginBottom = "10dp"
+    		android:layout_marginTop = "10dp"
+    		android:layout_marginRight = "10dp"
     		android:text="@string/login"
     		android:onClick="processLogIn" />
         <Button 
-         	android:layout_width="wrap_content"
+   			style="@style/buttonShortStyle"
     		android:layout_height="match_parent"
-    		android:layout_marginBottom = "20dp"
+    		android:layout_marginBottom = "10dp"
+    		android:layout_marginTop = "10dp"
+    		android:layout_marginLeft = "10dp"
     		android:text="@string/signup"
     		android:onClick="launchSignUp" />
     </LinearLayout>
