--- a/res/layout/confirmation.xml
+++ b/res/layout/confirmation.xml
@@ -3,7 +3,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation= "vertical"
-    android:gravity = "center">
+    android:gravity = "center"
+    android:background = "@color/ltblue">
     
     <LinearLayout
         android:layout_width = "match_parent"
@@ -14,6 +15,7 @@
 	      android:layout_width= "match_parent"
 	      android:layout_height = "match_parent"
 	      android:text="@string/question1"
+	      android:textColor="@color/black"
 	      android:gravity = "center"
 	      android:padding="10dp"
 	      android:textSize="18sp"
@@ -25,15 +27,17 @@
 	       android:orientation = "horizontal"
 	       android:gravity = "center"> 
 	        <Button 
-         	android:layout_width="wrap_content"
+	        style="@style/buttonShortStyle"
     		android:layout_height="match_parent"
+    		android:layout_marginTop="10dp"
     		android:layout_marginRight = "20dp"
     		android:layout_marginBottom = "20dp"
     		android:text="@string/yes"/>
     		
     		<Button 
-         	android:layout_width="wrap_content"
-    		android:layout_height="match_parent"    		
+	        style="@style/buttonShortStyle"
+    		android:layout_height="match_parent"    	
+    		android:layout_marginTop="10dp"	
     		android:layout_marginLeft = "20dp"
     		android:layout_marginBottom = "20dp"
     		android:text="@string/no"/>
