--- a/res/layout/signup.xml
+++ b/res/layout/signup.xml
@@ -3,87 +3,36 @@
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
     android:orientation = "vertical"    
-    android:gravity = "center">
-    	<LinearLayout
-	        android:layout_width = "fill_parent"
-	        android:layout_height = "wrap_content"
-	        android:orientation = "horizontal"
-	        android:layout_marginBottom = "20dp">
-	        <TextView
-		        android:layout_width ="wrap_content"
-		        android:layout_height = "match_parent"
-		        android:text="@string/name"
-		    	android:padding="10dp"
-		   		android:textSize="18sp"
-		        android:orientation="vertical"/>
+    android:gravity = "center"
+    android:background = "@color/ltblue" >
+    	
 	   		<EditText 
+	   		    style="@style/editTextStyle"
 		        android:id="@+id/name"
-		        android:layout_width = "fill_parent"
-		        android:layout_height = "match_parent"        
-		        android:background="@color/white"
-		        android:textColor="@color/black"
+		        android:hint="@string/name"
+		        android:layout_marginLeft="20dp"
+		        android:layout_marginRight="20dp"
+		        android:layout_marginBottom="20dp"
 		        android:inputType = "textCapWords"/>
-   		</LinearLayout>
-    	<LinearLayout
-	        android:layout_width = "fill_parent"
-	        android:layout_height = "wrap_content"
-	        android:orientation = "horizontal"
-	        android:layout_marginBottom = "20dp">
-	        <TextView
-		        android:layout_width ="wrap_content"
-		        android:layout_height = "match_parent"
-		        android:text="@string/email"
-		    	android:padding="10dp"
-		   		android:textSize="18sp"
-		        android:orientation="vertical"/>
+   		
 	   		<EditText 
+	   		    style="@style/editTextStyle"
 		        android:id="@+id/email"
-		        android:layout_width = "fill_parent"
-		        android:layout_height = "match_parent"        
-		        android:background="@color/white"
-		        android:textColor="@color/black"
+		        android:hint="@string/email"
+		        android:layout_marginLeft="20dp"
+		        android:layout_marginRight="20dp"
+		        android:layout_marginBottom="20dp"
 		        android:inputType = "textEmailAddress"/>
-   		</LinearLayout>
-    	<LinearLayout
-	        android:layout_width = "fill_parent"
-	        android:layout_height = "wrap_content"
-	        android:orientation = "horizontal"
-	        android:layout_marginBottom = "20dp">
-	        <TextView
-		        android:layout_width ="wrap_content"
-		        android:layout_height = "match_parent"
-		        android:text="@string/password"
-		    	android:padding="10dp"
-		   		android:textSize="18sp"
-		        android:orientation="vertical"/>
+   		
 	   		<EditText 
+	   		    style="@style/editTextStyle"
 		        android:id="@+id/password"
-		        android:layout_width = "fill_parent"
-		        android:layout_height = "match_parent"        
-		        android:background="@color/white"
-		        android:textColor="@color/black"
+		        android:hint="@string/password"
+		        android:layout_marginLeft="20dp"
+		        android:layout_marginRight="20dp"
+		        android:layout_marginBottom="20dp"
 		        android:inputType = "textPassword"/>
-	   	</LinearLayout>
-    	<!-- <LinearLayout
-	        android:layout_width = "fill_parent"
-	        android:layout_height = "wrap_content"
-	        android:orientation = "horizontal"
-	        android:layout_marginBottom = "20dp">
-	        <TextView
-		        android:layout_width ="wrap_content"
-		        android:layout_height = "match_parent"
-		        android:text="@string/confirm_password"
-		    	android:padding="10dp"
-		   		android:textSize="18sp"
-		        android:orientation="vertical"
-		        />
-	   		<EditText 
-		        android:id="@+id/confirm_password"
-		        android:layout_width = "fill_parent"
-		        android:layout_height = "match_parent"        
-		        android:background="@color/white"
-		        android:inputType = "none"/>
-	   	</LinearLayout>-->
+	   	
 	   	<LinearLayout
 	   	    android:layout_width = "fill_parent"
 	   	    android:layout_height="wrap_content"
@@ -92,11 +41,11 @@
 	   	    android:gravity="center">
 	   	    
 	   	    <Button 
-         	android:layout_width="wrap_content"
-    		android:layout_height="match_parent"
-    		android:layout_marginBottom = "20dp"
-    		android:text="@string/signup"
-    		android:onClick="processSignUp"/>
+	   	      	style="@style/buttonShortStyle"
+    			android:layout_height="match_parent"
+    			android:layout_marginBottom = "20dp"
+    			android:text="@string/signup"
+    			android:onClick="processSignUp"/>
     		</LinearLayout>
     
     
