--- a/res/layout/transaction.xml
+++ b/res/layout/transaction.xml
@@ -4,55 +4,45 @@
     android:layout_height="fill_parent"
     android:orientation = "vertical"
     android:gravity = "center"
-    android:layout_marginBottom = "20dp"> 
+    android:layout_marginBottom = "20dp"
+    android:background = "@color/ltblue" > 
     
     <TextView 
         android:layout_width = "match_parent"
         android:layout_height = "wrap_content"
         android:text="@string/howMuch"
+        android:textColor="@color/black"
         android:gravity = "center"
 	    android:padding="10dp"
 	    android:textSize="18sp"
         android:orientation = "horizontal"/>
-    <LinearLayout 
-        android:layout_width = "match_parent"
-        android:layout_height = "wrap_content"
-        android:gravity = "center"
-        android:orientation = "horizontal">
-        <TextView 
-        android:layout_width = "wrap_content"
-        android:layout_height = "wrap_content"
-        android:text="@string/money"
-        android:gravity = "center"
-	    android:padding="10dp"
-	    android:textSize="18sp"
-        android:orientation = "horizontal"/>
-        
-        
-	    <EditText 
-	        android:id="@+id/transactionAmount"
-	        android:layout_width = "160dp"
-	        android:layout_height = "wrap_content"
-	        android:background = "@color/white"
-	        android:textColor="@color/black"
-	        android:hint= "@string/hint"
-	        android:digits="0123456789."/>
-    </LinearLayout>
+    
+    <EditText
+        android:id="@+id/transactionAmount"
+        style="@style/editTextStyle"
+        android:layout_width="160dp"
+        android:digits="0123456789."
+        android:hint="@string/money" />
+
     <LinearLayout
         android:layout_width = "match_parent"
         android:layout_height = "wrap_content"
         android:orientation = "horizontal"
-        android:layout_marginBottom = "20dp"
+        android:layout_marginBottom = "10dp"
         android:gravity = "center">
         <Button 
-            android:layout_width="wrap_content"
+            style="@style/buttonShortStyle"
     		android:layout_height="match_parent"
+    		android:layout_marginRight = "10dp"
+        	android:layout_marginTop = "10dp"
     		android:layout_marginBottom = "20dp"
     		android:text="@string/ok"
     		android:onClick="startWaiting" />
          <Button 
-            android:layout_width="wrap_content"
+            style="@style/buttonShortStyle"
     		android:layout_height="match_parent"
+    		android:layout_marginLeft = "10dp"
+        	android:layout_marginTop = "10dp"
     		android:layout_marginBottom = "20dp"
     		android:text="@string/cancel"
     		android:onClick="quit" />
