--- a/res/layout/menu.xml
+++ b/res/layout/menu.xml
@@ -6,6 +6,24 @@
     android:gravity="center"
     android:orientation="vertical"
     android:background="@color/ltblue" >
+    
+    <TextView
+        android:id="@+id/name"
+       	android:layout_width= "match_parent"
+	    android:layout_height = "wrap_content"
+	    android:textSize = "18sp"
+	    android:textColor="@color/black"
+	    android:gravity = "center"
+        android:padding="10dp" />
+    
+    <TextView
+        android:id="@+id/balance"
+       	android:layout_width= "match_parent"
+	    android:layout_height = "wrap_content"
+	    android:textSize="18sp"
+	    android:textColor="@color/black"
+	    android:gravity = "center"
+        android:padding="10dp" />
 
     <Button 
         style="@style/buttonLongStyle"
@@ -13,14 +31,14 @@
         android:layout_marginBottom="20dp"
         android:text="@string/button_transaction" 
         android:onClick="startTransaction" />
-
+<!-- 
     <Button
 		style="@style/buttonLongStyle"
 		android:layout_height="wrap_content"
         android:layout_marginBottom="50dp"
         android:text="@string/button_addcard"
         android:onClick="startAddCard" />
-    
+-->
     <Button 
 		style="@style/buttonLongStyle"
         android:layout_height="wrap_content"
