--- a/res/values/style.xml
+++ b/res/values/style.xml
@@ -19,7 +19,7 @@
     <style name="editTextStyle">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">@color/white</item>
+        <item name="android:background">@drawable/rounded_button</item>
         <item name="android:textColor">@color/slate</item>
      	<item name="android:paddingTop">5dp</item>
      	<item name="android:paddingBottom">5dp</item>
