--- a/res/layout/menu.xml
+++ b/res/layout/menu.xml
@@ -7,6 +7,14 @@
     android:orientation="vertical"
     android:background="@color/ltblue" >
     
+    <LinearLayout
+    	android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+    	android:gravity="center"
+	    android:orientation="vertical"
+	    android:layout_marginBottom="80dp"
+    	android:background="@drawable/rounded_button" >
+    	
     <TextView
         android:id="@+id/name"
        	android:layout_width= "match_parent"
@@ -24,6 +32,8 @@
 	    android:textColor="@color/black"
 	    android:gravity = "center"
         android:padding="10dp" />
+    
+    </LinearLayout>
 
     <Button 
         style="@style/buttonLongStyle"
