--- a/res/values/style.xml
+++ b/res/values/style.xml
@@ -24,7 +24,7 @@
      	<item name="android:paddingTop">5dp</item>
      	<item name="android:paddingBottom">5dp</item>
      	<item name="android:paddingRight">5dp</item>
-     	<item name="android:gravity">right</item>
+     	<item name="android:gravity">center</item>
         
         
     </style>
