--- a/res/values/style.xml
+++ b/res/values/style.xml
@@ -21,6 +21,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@drawable/rounded_button</item>
         <item name="android:textColor">@color/slate</item>
+        <item name="android:typeface">sans</item>
      	<item name="android:paddingTop">5dp</item>
      	<item name="android:paddingBottom">5dp</item>
      	<item name="android:paddingRight">5dp</item>
